# unitree_model_control

./: CMakeLists.txt  package.xml  readme.md
include/: model_node.hpp
lib/: model.cpp  model.hpp  unitree_custom.cpp  unitree_custom.hpp
models/: policy_1.pt
src/: model_node.cpp  model_run.cpp
